# hardfiskur

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  elo_history.md  interesting_games.md
bitboard_attack_viewer/: Cargo.toml
bitboard_attack_viewer/src/: main.rs
find_magics/: Cargo.toml
find_magics/src/: main.rs
hardfiskur/: Cargo.toml
hardfiskur/src/: main.rs
hardfiskur_app/: Cargo.toml
hardfiskur_app/src/: board_manager.rs  fen_input.rs  game_manager.rs  main.rs  search_thread.rs  sfx_stream.rs
hardfiskur_core/: Cargo.toml
hardfiskur_core/src/: lib.rs  perft.rs  test_utils.rs
hardfiskur_core/src/board/: bitboard.rs  board_repr.rs  castling.rs  fen.rs  mod.rs  move_repr.rs  piece.rs  san.rs  square.rs  uci_move.rs  zobrist.rs
hardfiskur_core/src/move_gen/: bitboard_utils.rs  lookups.rs  magic.rs  mod.rs
hardfiskur_core/src/move_gen/pseudo_legal/: mod.rs  pawn_moves.rs
hardfiskur_engine/: Cargo.toml
hardfiskur_engine/src/: bench.rs  effort_table.rs  history_table.rs  lib.rs  move_ordering.rs  parameters.rs  score.rs  search.rs  search_limits.rs  search_result.rs  search_stats.rs  time_manager.rs  transposition_table.rs
hardfiskur_engine/src/evaluation/: lookups.rs  mobility.rs  mod.rs  packed_score.rs  parameters.rs  pawn_structure.rs  phase.rs  piece_tables.rs  template_params.rs  terms.rs  trace.rs
hardfiskur_engine/src/move_ordering/: history_table.rs  killer_table.rs  mod.rs  see.rs
hardfiskur_engine/src/search/: aspiration.rs  extensions.rs  forward_pruning.rs  mod.rs  negamax.rs  node_types.rs  quiescence.rs
hardfiskur_uci/: Cargo.toml  build.rs
hardfiskur_uci/src/: format_utils.rs  lib.rs  main.rs  parse_utils.rs  uci.rs  uci_info.rs  uci_message.rs  uci_option_config.rs  uci_position.rs  uci_search_control.rs  uci_time_control.rs
hardfiskur_uci/src/parsing/: info.rs  mod.rs  option.rs  position.rs  test.rs  utils.rs
hardfiskur_ui/: Cargo.toml
hardfiskur_ui/src/: board_style.rs  constants.rs  lib.rs  ui.rs
hardfiskur_ui/src/base_board/: arrow.rs  mod.rs  promo_ui.rs  render.rs  sprite_state.rs
hardfiskur_ui/src/chess_board/: mod.rs
interesting_games/: francis.pgn  incorrect_repetition_bug.txt
magic_bitboard_viewer/: Cargo.toml
magic_bitboard_viewer/src/: main.rs
perft/: Cargo.toml
perft/src/: main.rs
perft_testsuite/: Cargo.toml
perft_testsuite/src/: main.rs
pst_viewer/: Cargo.toml
pst_viewer/src/: main.rs
tuner-lib/: Cargo.toml
tuner-lib/src/: lib.rs
