[package]
name = "bitboard_attack_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28"
hardfiskur_core = { path = "../hardfiskur_core" }
hardfiskur_ui = { path = "../hardfiskur_ui" }
