[package]
name = "hardfiskur_app"
version = "0.1.0"
edition = "2021"
default-run = "hardfiskur_app"

[dependencies]
eframe = "0.28"
rand = "0.8"
rodio = "0.19"
hardfiskur_core = { path = "../hardfiskur_core" }
hardfiskur_ui = { path = "../hardfiskur_ui" }
hardfiskur_engine = { path = "../hardfiskur_engine" }
