[package]
name = "hardfiskur_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
bitflags = "2.3.3"
num-derive = "0.4.0"
num-traits = "0.2.15"
thiserror = "1.0.41"

[dev-dependencies]
pretty_assertions = "1.4.0"
