[package]
name = "hardfiskur_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
bitflags = "2.6"
num-derive = "0.4"
num-traits = "0.2"
paste = "1.0"
seq-macro = "0.3"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
