[package]
name = "hardfiskur_uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
nom_permutation = "0.1"
thiserror = "1.0"
threadpool = "1.8"
hardfiskur_core = { path = "../hardfiskur_core" }
hardfiskur_engine = { path = "../hardfiskur_engine" }

[dev-dependencies]
pretty_assertions = "1.4.0"
