[package]
name = "hardfiskur_uci"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
nom_permutation = "0.1"
thiserror = "1.0"
hardfiskur_core = { path = "../hardfiskur_core" }
hardfiskur_engine = { path = "../hardfiskur_engine" }

[dev-dependencies]
pretty_assertions = "1.4.0"

[build-dependencies]
anyhow = "1.0"
vergen-gitcl = { version = "1.0", features = [] }
